--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,7 +23,7 @@
 
   <style>
     #calory {
-	color:  red;
+	color: black;
 	font-weight: bold;
   }
   </style>
@@ -124,7 +124,6 @@
             <div class="caption">
               <div class="caption-content">
                 <div id="calory" class="h2">Product Landing Page</div>
-                <p id="calory" class="mb-0">This website is for sales of stationery items, office and school supplies.</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -135,7 +134,6 @@
             <div class="caption">
               <div class="caption-content">
                 <div id="calory" class="h2">Documentation Page</div>
-                <p id="calory" class="mb-0">This website helps a new user understand how to write codes with PHP language. </p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -146,7 +144,6 @@
             <div class="caption">
               <div class="caption-content">
                 <div id="calory" class="h2">Survey Form</div>
-                <p id="calory" class="mb-0">This website serves as a survey form for children and adolescent summer camp activities.</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -157,7 +154,6 @@
             <div class="caption">
               <div class="caption-content">
                 <div id="calory" class="h2">Tribute Page</div>
-                <p id="calory" class="mb-0">This website lists out some major time lines about the King of Pop, Michael Jackson.</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
