Updated the portfolio

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -38,16 +38,16 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">About</a>
+        <a class="js-scroll-trigger" href="#about">About Us</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
+        <a class="js-scroll-trigger" href="#services">Our Services</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+        <a class="js-scroll-trigger" href="#portfolio">Our Portfolio</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger" href="#contact">Contact Us</a>
       </li>
     </ul>
   </nav>
@@ -57,7 +57,7 @@
     <div class="container text-center my-auto">
       <h1 style="color:white;" class="mb-1">I am Collins Okwologu.</h1>
       <h3 style="color:white;" class="mb-5">
-        <em>The Senior Front End Developer at Hybrid Media Concept. We are a Tech and Software Development company that is based in Lagos, Nigeria. Our services include, but not limited to; Website Design, Graphic Design, Cloud Computing, Website Hosting and Domain Registration.</em>
+        <em>The Senior Front End Developer at Hybrid Media Concept. We are a Software Development company based in Lagos, Nigeria. Our services include, but not limited to; Website Design, Graphic Design, Cloud Computing, Website Hosting and Domain Registration.</em>
       </h3>
     </div>
     <div class="overlay"></div>
@@ -78,7 +78,7 @@
           <h4>
             <strong>Website Design</strong>
           </h4>
-          <p class="text-faded mb-0">We create highly responsive websites, that will display properly on mobile, desktop and tab devices respectively.</p>
+          <p class="text-faded mb-0">We create highly responsive websites, that displays properly on mobile, desktop and tab devices respectively.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -87,7 +87,7 @@
           <h4>
             <strong>Graphic Design</strong>
           </h4>
-          <p class="text-faded mb-0">We create highly aesthetic designs and logos, that will attract attention even from a far distance.</p>
+          <p class="text-faded mb-0">We create highly aesthetic designs and logos, that attracts the attention of your prospective clients.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -96,7 +96,7 @@
           <h4>
             <strong>Cloud Computing</strong>
           </h4>
-          <p class="text-faded mb-0">This is the latest method of securely storing files and documents on the cloud. We highly recommend it.</p>
+          <p class="text-faded mb-0">This is the latest method of securely storing files and documents on the cloud. We highly recommend it for every business.</p>
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -105,7 +105,7 @@
           <h4>
             <strong>Hosting & Domain</strong>
           </h4>
-          <p class="text-faded mb-0">We help businesses and companies register domain name for their websites and host it in the process.</p>
+          <p class="text-faded mb-0">We help businesses and companies register domain name for their websites and we also do hosting too.</p>
         </div>
       </div>
     </div>
@@ -130,13 +130,13 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://collins975.github.io/Documentation/" target="_blank">
+          <a class="portfolio-item" href="https://collins975.github.io/Quote/" target="_blank">
             <div class="caption">
               <div class="caption-content">
-                <div id="calory" class="h2">Documentation Page</div>
+                <div id="calory" class="h2">Random Quote Machine</div>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio-5.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
