--- a/Quote/index.html
+++ b/Quote/index.html
@@ -12,7 +12,17 @@
     <title>Random Quote Machine</title>
 </head>
 <body>
+    <div class="header">
+        <div class="nura">
+            <h1>QUOTES LAB</h1>
+        </div>
+        <div class="roli">
+            <p>Get a new quote and the name of the author everytime you click the new quote button, share with family and friends directly on social media by clicking the social media icons below.</p>
+        </div>
+    </div>
     <div id="app"></div>
     <script type="text/babel" src="index.js"></script>
+    <div id="footer">App Developed by Okwologu Collins.
+    </div>
 </body>
 </html>
