Updated the image

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -123,7 +123,7 @@
           <a class="portfolio-item" href="https://collins975.github.io/Shoponpacifier/" target="_blank">
             <div class="caption">
               <div class="caption-content">
-                <div id="calory" class="h2">Product Landing Page</div>
+                <div id="calory" class="h2" style="color: white;">Product Landing Page</div>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -133,17 +133,17 @@
           <a class="portfolio-item" href="https://collins975.github.io/Quote/" target="_blank">
             <div class="caption">
               <div class="caption-content">
-                <div id="calory" class="h2">Random Quote Machine</div>
+                <div id="calory" class="h2" style="color: white;">Random Quote Machine</div>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio-5.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio-6.JPG" alt="">
           </a>
         </div>
         <div class="col-lg-6">
           <a class="portfolio-item" href="https://collins975.github.io/Form/" target="_blank">
             <div class="caption">
               <div class="caption-content">
-                <div id="calory" class="h2">Survey Form</div>
+                <div id="calory" class="h2" style="color: white;">Survey Form</div>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -153,7 +153,7 @@
           <a class="portfolio-item" href="https://collins975.github.io/Tribute/" target="_blank">
             <div class="caption">
               <div class="caption-content">
-                <div id="calory" class="h2">Tribute Page</div>
+                <div id="calory" class="h2" style="color: white;">Tribute Page</div>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
